--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
-project(flip)
+project(flip
+    VERSION 0.0.1
+    HOMEPAGE_URL https://www.github.com/lotkey/flip
+)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 17)
 set(SRC ${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -9,3 +12,6 @@ add_executable(flip
     ${SRC}/main.cpp
     ${SRC}/clipboard.cpp
 )
+
+install(TARGETS flip DESTINATION bin)
+message("Add ${CMAKE_INSTALL_PREFIX}/bin to your PATH variable.")
